Bug 1212116, dispatch wheel events on disabled form controls, r=bz